Fixed alignment of header/footers on mobile.

--- a/contact.css
+++ b/contact.css
@@ -67,7 +67,7 @@ a.linkypoo:hover {
 
 footer.footerflex {
 	justify-content: center;
-	margin-top: 325px;
+	margin-top: 500px;
 	background-color: #457B9D;
 	display: flex;
 	font-family: 'Oswald';
